--- a/Abbohubb/templates/vergelijk.html
+++ b/Abbohubb/templates/vergelijk.html
@@ -108,14 +108,13 @@
     {% endif %}
   {% endif %}
 </head>
-
-<!-- Google Tag Manager & adsense (noscript) -->
-<noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRGH8P6W" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5139039913201131" crossorigin="anonymous"></script>
-
 <body class="page-vergelijk">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRGH8P6W"
+            height="0" width="0"
+            style="display:none;visibility:hidden"></iframe>
+  </noscript>
   <!-- Skip to content -->
   <a class="skip-link" href="#vergelijk-tabel">Direct naar vergelijking</a>
 
