--- a/Abbohubb/templates/abonnement_reviews.html
+++ b/Abbohubb/templates/abonnement_reviews.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <!-- Vendor scripts (End Google Tag Manager) -->
+<!-- Vendor scripts (o.a. Google Tag Manager loader in vendor.js) -->
+<script src="{{ url_for('static', filename='js/vendor.js') }}"></script>
+
   <script src="{{ url_for('static', filename='js/vendor.js') }}"></script>
 
   <meta charset="UTF-8">
@@ -84,17 +86,17 @@
       }
     ]
   }
-  </script>
+  </script> 
+  <!-- adsense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5139039913201131"
+  crossorigin="anonymous"></script>
+<!-- End adsense Manager-->
 </head>
 
-<!-- Google Tag Manager & adsense (noscript) -->
+<body>
+  <!-- Google Tag Manager -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRGH8P6W"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5139039913201131"
-  crossorigin="anonymous"></script>
-<!-- End Google Tag Manager (noscript) -->
-
-<body>
   <!-- Header met de abonnementsnaam -->
   <header>
     <nav class="main-nav" aria-label="Hoofdnavigatie">
