--- a/Abbohubb/templates/blog_detail.html
+++ b/Abbohubb/templates/blog_detail.html
@@ -19,12 +19,14 @@
 
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
   <style>
-    .blog-container { max-width: 600px; margin: 30px auto; padding: 0 15px; font-family: Arial, sans-serif; }
+    .blog-container { max-width: 600px; margin: 30px auto; padding: 0 15px; background-color: white;}
     .blog-header h1 { font-size: 2rem; margin-bottom: 0.2rem; }
     .blog-meta { color: #777; font-size: 0.9rem; margin-bottom: 1rem; }
     .blog-image { max-width: 90%; height: auto; margin: 15px 0; border-radius: 8px; }
     .blog-video iframe { width: 100%; height: 400px; border: none; margin: 20px 0; border-radius: 8px; }
     .blog-inhoud { font-size: 1rem; line-height: 1.6; color: #333; }
+    body {background: white;
+}
   </style>
 </head>
 <body>
