--- a/Abbohubb/templates/index.html
+++ b/Abbohubb/templates/index.html
@@ -452,6 +452,19 @@
   <!-- Cookiebanner insluiten -->
   {% include 'cookie-banner.html' %}
   <script src="{{ url_for('static', filename='js/index.js') }}"></script> 
+  <!-- Begin TradeTracker SuperTag Code -->
+<script type="text/javascript">
+
+    var _TradeTrackerTagOptions = {
+        t: 'a',
+        s: '502650',
+        chk: 'f9f0ae41784414f7486ba22c62aa2e49',
+        overrideOptions: {}
+    };
+
+    (function() {var tt = document.createElement('script'), s = document.getElementsByTagName('script')[0]; tt.setAttribute('type', 'text/javascript'); tt.setAttribute('src', (document.location.protocol == 'https:' ? 'https' : 'http') + '://tm.tradetracker.net/tag?t=' + _TradeTrackerTagOptions.t + '&s=' + _TradeTrackerTagOptions.s + '&chk=' + _TradeTrackerTagOptions.chk); s.parentNode.insertBefore(tt, s);})();
+</script>
+<!-- End TradeTracker SuperTag Code -->
             </body>
 </html>
 
